added css styling to all classes, id;s and tags

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="col-md-6 content-column">
                 <img id="youwin-image" src="assets/images/you-win-trophy.png" alt="You Win Image" />
                 <img id="gameover-image" src="assets/images/gameover.png" alt="Game Over Image" />
-                <h2 id="restart">Press Any Key to Try Again!</h2>
+                <h2 id="reset">Press Any Key to Try Again!</h2>
                 <img id="sportsImage" src="/Users/julesazuma/Documents/Word-Guess-Game/assets/images/sports-image.png" alt="" />
             </div>
             <div class="col-md-6 content-column">
