--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hangman Game!</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
-    crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet/text" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <script src="assets/javascript/game.js" type="text/javascript"></script>
@@ -20,19 +19,19 @@
             <div class="col-md-6 content-column">
                 <img id="youwin-image" src="assets/images/you-win-trophy.png" alt="You Win Image" />
                 <img id="gameover-image" src="assets/images/gameover.png" alt="Game Over Image" />
-                <h2 id="reset">Press Any Key to Try Again!</h2>
+                <h2 id="tryAgain">Press Any Key to Try Again!</h2>
                 <img id="sportsImage" src="/Users/julesazuma/Documents/Word-Guess-Game/assets/images/sports-image.png" alt="" />
             </div>
             <div class="col-md-6 content-column">
                 <h2>Press Any Key to Get Started!</h2>
-                <h4>Wins</h4>
-                <h5 id="totalWins"></h5>
-                <h4>Current Word</h4>
-                <h3 id="currentWord"></h3>
-                <h4>Guesses Remaining</h4>
-                <h6 id="geussesRemaining"></h6>
-                <h4>Letters Guessed</h4>
-                <h3 id="lettersGuessed"></h3>
+                <p>Wins</p>
+                <p id="totalWins"></p>
+                <p>Current Word</p>
+                <p id="currentWord"></p>
+                <p>Guesses Remaining</p>
+                <p id="guessesRemaining"></p>
+                <p>Letters Guessed</p>
+                <p id="lettersGuessed"></p>
             </div>
         </div>
     </div>
