used function reloadDisplay to put new info into the html placeholders for the game display

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     </div>
 
     <script>
-        resetGame();
-        updateDisplay();
+        refreshGame();
+        reloadDisplay();
     </script>
 
 </body>
